--- a/TheNuggetList/Views/Shared/_layout.cshtml
+++ b/TheNuggetList/Views/Shared/_layout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>The Nuggets List!</title>
+    <title>The Nuggets List! - Mike is gay</title>
 </head>
 <body>
     <div>
