- updated publish profile - added home controller - updated web.config

--- a/TheNuggetList/Views/Home/Delete.cshtml
+++ b/TheNuggetList/Views/Home/Delete.cshtml
@@ -1,7 +1,8 @@
-﻿@model TheNuggetList.Domain.Nugget
+﻿@model TheNuggetList.Domain.Nuggets.Nugget
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 
 <h2>Delete</h2>
