--- a/TheNuggetList/Views/Home/Edit.cshtml
+++ b/TheNuggetList/Views/Home/Edit.cshtml
@@ -1,7 +1,8 @@
-﻿@model TheNuggetList.Domain.Nugget
+﻿@model TheNuggetList.Domain.Nuggets.Nugget
 
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 
 <h2>Edit</h2>
