--- a/TheNuggetList/Views/Home/Index.cshtml
+++ b/TheNuggetList/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<TheNuggetList.Domain.Nugget>
+﻿@model IEnumerable<TheNuggetList.Domain.Nuggets.Nugget>
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 
 <h2>Index</h2>
