--- a/TheNuggetList/Views/Home/Details.cshtml
+++ b/TheNuggetList/Views/Home/Details.cshtml
@@ -1,7 +1,8 @@
-﻿@model TheNuggetList.Domain.Nugget
+﻿@model TheNuggetList.Domain.Nuggets.Nugget
 
 @{
     ViewBag.Title = "Details";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 
 <h2>Details</h2>
