--- a/TheNuggetList/Views/Home/Index.cshtml
+++ b/TheNuggetList/Views/Home/Index.cshtml
@@ -1,34 +1,5 @@
-﻿@model IEnumerable<TheNuggetList.Domain.Nuggets.Nugget>
-
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_layout.cshtml";
+﻿@{
+    ViewBag.Title = "Nugget List";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+<h2>Home</h2>
