--- a/TheNuggetList/Views/Home/Index.cshtml
+++ b/TheNuggetList/Views/Home/Index.cshtml
@@ -1,4 +1,94 @@
 ﻿@{
     ViewBag.Title = "Nugget List";
 }
-
+<div class="addNugget">
+    <form action="#" method="post">
+    <div class="control-group">
+        <label class="control-label" for="name">
+            Name</label>
+        <div class="controls">
+            <input class="input-block-level" type="text" placeholder="Share your nugget..." id="name" />
+        </div>
+    </div>
+    <div class="additionalFields">
+        <div class="control-group">
+            <label class="control-label" for="name">
+                Name</label>
+            <div class="controls">
+                <textarea class="input-block-level" rows="10" placeholder="Describe your nugget"></textarea>
+            </div>
+        </div>
+        <div class="form-actions">
+            <button type="button" class="btn">
+                Cancel</button>
+            <button type="submit" class="btn btn-primary btn-large">
+                Post nugget</button>
+        </div>
+    </div>
+    </form>
+</div>
+<ul class="nuggets">
+    <li class="nugget">
+        <article>
+					<header class="hd">
+						<h1>
+							Nugget Name</h1>
+					</header>
+					<div class="description">
+						<p>
+							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
+							ante.</p>
+						<p>
+							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
+							placerat eleifend leo.</p>
+					</div>
+					<footer class="meta">
+						<p class="created">
+							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
+					</footer>
+				</article>
+    </li>
+    <li class="nugget">
+        <article>
+					<header class="hd">
+						<h1>
+							Nugget Name</h1>
+					</header>
+					<div class="description">
+						<p>
+							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
+							ante.</p>
+						<p>
+							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
+							placerat eleifend leo.</p>
+					</div>
+					<footer class="meta">
+						<p class="created">
+							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
+					</footer>
+				</article>
+    </li>
+    <li class="nugget">
+        <article>
+					<header class="hd">
+						<h1>
+							Nugget Name</h1>
+					</header>
+					<div class="description">
+						<p>
+							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
+							ante.</p>
+						<p>
+							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
+							placerat eleifend leo.</p>
+					</div>
+					<footer class="meta">
+						<p class="created">
+							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
+					</footer>
+				</article>
+    </li>
+</ul>
