--- a/TheNuggetList/Views/Shared/_layout.cshtml
+++ b/TheNuggetList/Views/Shared/_layout.cshtml
@@ -42,108 +42,15 @@
 			<span class="header-nugget"></span>
 		</div>
 	</div>
-	<div class="container-narrow">
+    <div class="container-narrow">
 		
-		@RenderBody()
+        @RenderBody()
 
-		<div class="addNugget">
-			<form action="#" method="post">
-			<div class="control-group">
-				<label class="control-label" for="name">
-					Name</label>
-				<div class="controls">
-					<input class="input-block-level" type="text" placeholder="Share your nugget..." id="name" />
-				</div>
-			</div>
-			<div class="additionalFields">
-				<div class="control-group">
-					<label class="control-label" for="name">
-						Name</label>
-					<div class="controls">
-						<textarea class="input-block-level" rows="10" placeholder="Describe your nugget"></textarea>
-					</div>
-				</div>
-				<div class="form-actions">
-					<button type="button" class="btn">
-						Cancel</button>
-					<button type="submit" class="btn btn-primary btn-large">
-						Post nugget</button>
-				</div>
-			</div>
-			</form>
-		</div>
-		<ul class="nuggets">
-			<li class="nugget">
-				<article>
-					<header class="hd">
-						<h1>
-							Nugget Name</h1>
-					</header>
-					<div class="description">
-						<p>
-							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-							ante.</p>
-						<p>
-							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-							placerat eleifend leo.</p>
-					</div>
-					<footer class="meta">
-						<p class="created">
-							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
-					</footer>
-				</article>
-			</li>
-			<li class="nugget">
-				<article>
-					<header class="hd">
-						<h1>
-							Nugget Name</h1>
-					</header>
-					<div class="description">
-						<p>
-							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-							ante.</p>
-						<p>
-							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-							placerat eleifend leo.</p>
-					</div>
-					<footer class="meta">
-						<p class="created">
-							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
-					</footer>
-				</article>
-			</li>
-			<li class="nugget">
-				<article>
-					<header class="hd">
-						<h1>
-							Nugget Name</h1>
-					</header>
-					<div class="description">
-						<p>
-							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-							ante.</p>
-						<p>
-							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-							placerat eleifend leo.</p>
-					</div>
-					<footer class="meta">
-						<p class="created">
-							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
-					</footer>
-				</article>
-			</li>
-		</ul>
-		<div class="footer">
-			<p>
-				&copy; @DateTime.Now.Year Nugget List</p>
-			<p>
-				Press <span class="key">N</span> to start sharing your next nugget.</p>
-		</div>
-	</div>
+
+        @Html.Partial("_footer.html")
+
+    </div>
+
 	<!-- Login -->
 	<div id="signIn" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="signInLabel"
 		aria-hidden="true">
@@ -162,25 +69,28 @@
 				Okay!</button>
 		</div>
 	</div>
-	<!-- Login -->
-	<div id="register" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="registerLabel"
-		aria-hidden="true">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-				×</button>
-			<h3 id="registerLabel">
-				Register</h3>
-		</div>
-		<div class="modal-body">
-			<p>
-				We are currently in beta. This will be enabled in the future!</p>
-		</div>
-		<div class="modal-footer">
-			<button data-dismiss="modal" class="btn btn-primary">
-				Okay!</button>
-		</div>
-	</div>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	<!-- Register -->
+    <div id="register" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="registerLabel"
+         aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                ×</button>
+            <h3 id="registerLabel">
+                Register</h3>
+        </div>
+        <div class="modal-body">
+            <p>
+                We are currently in beta. This will be enabled in the future!</p>
+        </div>
+        <div class="modal-footer">
+            <button data-dismiss="modal" class="btn btn-primary">
+                Okay!</button>
+        </div>
+    </div>
+    
+
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	<script>		window.jQuery || document.write('<script src="@Url.Content("Scripts/vendor/jquery-1.9.0.min.js")"><\/script>')</script>
 	<script src="@Url.Content("/Scripts/vendor/bootstrap.min.js")"></script>
 	<script src="@Url.Content("/Scripts/vendor/jquery.hotkeys.js")"></script>
