--- a/TheNuggetList/Views/Home/Index.cshtml
+++ b/TheNuggetList/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Nugget List";
 }
+
 <div class="addNugget">
     <form action="#" method="post">
     <div class="control-group">
@@ -27,68 +28,6 @@
     </div>
     </form>
 </div>
-<ul class="nuggets">
-    <li class="nugget">
-        <article>
-					<header class="hd">
-						<h1>
-							Nugget Name</h1>
-					</header>
-					<div class="description">
-						<p>
-							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-							ante.</p>
-						<p>
-							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-							placerat eleifend leo.</p>
-					</div>
-					<footer class="meta">
-						<p class="created">
-							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
-					</footer>
-				</article>
-    </li>
-    <li class="nugget">
-        <article>
-					<header class="hd">
-						<h1>
-							Nugget Name</h1>
-					</header>
-					<div class="description">
-						<p>
-							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-							ante.</p>
-						<p>
-							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-							placerat eleifend leo.</p>
-					</div>
-					<footer class="meta">
-						<p class="created">
-							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
-					</footer>
-				</article>
-    </li>
-    <li class="nugget">
-        <article>
-					<header class="hd">
-						<h1>
-							Nugget Name</h1>
-					</header>
-					<div class="description">
-						<p>
-							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-							ante.</p>
-						<p>
-							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-							placerat eleifend leo.</p>
-					</div>
-					<footer class="meta">
-						<p class="created">
-							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
-					</footer>
-				</article>
-    </li>
-</ul>
+
+
+@Html.Partial("_homeNuggetList", new List<HomeNuggetListItemViewModel>())
