--- a/TheNuggetList/Views/Shared/_layout.cshtml
+++ b/TheNuggetList/Views/Shared/_layout.cshtml
@@ -47,7 +47,7 @@
         @RenderBody()
 
 
-        @Html.Partial("_footer.html")
+        @Html.Partial("_footer")
 
     </div>
 
@@ -88,7 +88,6 @@
         </div>
     </div>
     
-
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	<script>		window.jQuery || document.write('<script src="@Url.Content("Scripts/vendor/jquery-1.9.0.min.js")"><\/script>')</script>
