--- a/TheNuggetList/Views/Shared/_homeNuggetList.cshtml
+++ b/TheNuggetList/Views/Shared/_homeNuggetList.cshtml
@@ -1,67 +1,23 @@
 ﻿@model List<HomeNuggetListItemViewModel>
-
 <ul class="nuggets">
-    <li class="nugget">
-        <article>
-					<header class="hd">
-						<h1>
-							Nugget Name</h1>
-					</header>
-					<div class="description">
-						<p>
-							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-							ante.</p>
-						<p>
-							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-							placerat eleifend leo.</p>
-					</div>
-					<footer class="meta">
-						<p class="created">
-							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
-					</footer>
-				</article>
-    </li>
-    <li class="nugget">
-        <article>
-					<header class="hd">
-						<h1>
-							Nugget Name</h1>
-					</header>
-					<div class="description">
-						<p>
-							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-							ante.</p>
-						<p>
-							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-							placerat eleifend leo.</p>
-					</div>
-					<footer class="meta">
-						<p class="created">
-							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
-					</footer>
-				</article>
-    </li>
-    <li class="nugget">
-        <article>
-					<header class="hd">
-						<h1>
-							Nugget Name</h1>
-					</header>
-					<div class="description">
-						<p>
-							Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-							egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-							ante.</p>
-						<p>
-							Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-							placerat eleifend leo.</p>
-					</div>
-					<footer class="meta">
-						<p class="created">
-							<strong>Posted:</strong> 2 days ago <span>by</span> fitz0019</p>
-					</footer>
-				</article>
-    </li>
+    @foreach (var nugget in Model)
+    {
+        <li class="nugget">
+            <article>
+            <header class="hd">
+                <h1>
+                    @nugget.Title</h1>
+            </header>
+            <div class="description">
+                <p>
+                   @nugget.Description</p>
+            </div>
+            <footer class="meta">
+                <p class="created">
+                    <strong>Posted:</strong> @DateTimeFormater.GetReadableTimespan(nugget.Created) <span>by</span> @nugget.PostedBy</p>
+            </footer>
+        </article>
+        </li>
+        
+    }
 </ul>
