--- a/TheNuggetList/Views/Home/Index.cshtml
+++ b/TheNuggetList/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewBag.Title = "Nugget List";
-}
+﻿@model HomeViewModel
 
 <div class="addNugget">
     <form action="#" method="post">
@@ -30,12 +28,4 @@
 </div>
 
 
-@Html.Partial("_homeNuggetList", new List<HomeNuggetListItemViewModel>()
-    {
-        new HomeNuggetListItemViewModel()
-            {
-                Title = "I Can Typing",
-                Description = "I Can Typing",
-                Created = new DateTime(2013, 02, 08, 22, 59, 00)
-            }
-    })
+@Html.Partial("_homeNuggetList", Model.Nuggets)
